# old-carnage-api

./: .pre-commit-config.yaml  Containerfile  Makefile  pyproject.toml
carnage/: __main__.py  application.py  constants.py
carnage/api/auth/: authentication.py
carnage/api/routes/: account.py  base.py
carnage/api/routes/authentication/: github.py  gitlab.py  google.py
carnage/api/schemas/: account.py
carnage/cli/: migration.py
carnage/core/monsters/: base.py  manager.py
carnage/core/spells/: base.py  fireball.py  manager.py
carnage/core/systems/: dungeon_generation.py
carnage/core/vocations/: base.py  knight.py  manager.py
carnage/database/: session.py
carnage/database/_migrations/versions/: 08503cbf8344_add_vocations_table.py  105b44e2cd80_add_dungeon_difficulties_table.py  1ce1c2b396e4_add_spell_range_types_table.py  1e5ec8a69d2a_add_monsters_table.py  23800d534c41_add_players_table.py  270b23de31a6_add_spell_duration_types_table.py  3952c0015b7e_add_monster_types_table.py  473845e5b331_add_races_table.py  47f45d3c3177_add_items_table.py  4d66aa8691ab_add_item_base_types_table.py  658ed39ab41d_add_sizes_table.py  87b7c15b5878_add_item_magical_types_table.py  8a31d6b9e7ad_add_dungeon_schemas_table.py  8f12a0e9d6b9_add_dungeon_histories_table.py  95dedd7a6ff7_add_spells_table.py  9c1fb4c99354_add_accounts_table.py  a0f9352b5811_add_dungeons_table.py  cb4455d1fe66_add_spell_schools_table.py  dc5cda6ee935_add_conditions_table.py  dc8743764847_add_vocation_spells_table.py  df361914ac23_add_channel_chats_table.py  e2dc8ed298d7_add_item_rarities_table.py  f336343b47f6_add_difficulties_table.py  f4f1c4da349e_add_game_modes_table.py  fafbc5ff017f_add_global_chats_table.py  faffe495bb96_add_aligments_table.py
carnage/database/models/: account.py
carnage/database/repository/: account.py  base.py
carnage/database/repository/dungeon/: dungeon_history.py
carnage/database/repository/vocation/: vocation_spell.py
carnage/database/seeds/: account.py  manager.py  player.py
hack/: check_sphinx_docs.py
(+10 files in other folders)
