[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "carnage"
description = "API for Carnage."
readme = "README.md"
requires-python = ">=3.13"
keywords = ["carnage", "game", "hardcore", "api"]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "alembic==1.16.1",
    "authlib==1.6.0",
    "cryptography==45.0.6",
    "itsdangerous==2.2.0",
    "psycopg-binary==3.2.9",
    "pydantic[email]==2.11.5",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.34.3",
    "rich==14.0.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "python-jose[cryptography]==3.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "anyio==4.9.0",
    "covdefaults==2.3.0",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "pytest-env==1.1.5",
    "pytest-xdist[psutil]==3.7.0",
    "tox==4.26.0",
]
docs = ["sphinx==8.2.3", "sphinx-rtd-theme==3.0.2"]

[project.scripts]
carnage = "carnage.__main__:main"

# Tool
[tool.setuptools.packages]
find = { exclude = ["tests*"] }

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["carnage"]
omit = ["carnage/api/routes/debug.py"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.black]
line-length = 79
target-version = ["py313"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.isort]
profile = "black"
line_length = 79

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
fail-under = 100
exclude = ["carnage/database/_migrations"]
quiet = false
color = true
omit-covered-files = true
